// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTheme create default theme 1`] = `
Object {
  "disableGlobalClassNames": false,
  "effects": Object {
    "elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
    "elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
    "elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
    "roundedCorner2": "2px",
    "roundedCorner4": "4px",
    "roundedCorner6": "6px",
  },
  "fonts": Object {
    "large": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "18px",
      "fontWeight": 400,
    },
    "medium": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
    },
    "mediumPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "16px",
      "fontWeight": 400,
    },
    "mega": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "68px",
      "fontWeight": 600,
    },
    "small": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "smallPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "superLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "42px",
      "fontWeight": 600,
    },
    "tiny": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "20px",
      "fontWeight": 600,
    },
    "xLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    },
    "xSmall": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xxLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "28px",
      "fontWeight": 600,
    },
    "xxLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "32px",
      "fontWeight": 600,
    },
  },
  "isInverted": false,
  "palette": Object {
    "accent": "#0078d4",
    "black": "#000000",
    "blackTranslucent40": "rgba(0,0,0,.4)",
    "blue": "#0078d4",
    "blueDark": "#002050",
    "blueLight": "#00bcf2",
    "blueMid": "#00188f",
    "green": "#107c10",
    "greenDark": "#004b1c",
    "greenLight": "#bad80a",
    "magenta": "#b4009e",
    "magentaDark": "#5c005c",
    "magentaLight": "#e3008c",
    "neutralDark": "#201f1e",
    "neutralLight": "#edebe9",
    "neutralLighter": "#f3f2f1",
    "neutralLighterAlt": "#faf9f8",
    "neutralPrimary": "#323130",
    "neutralPrimaryAlt": "#3b3a39",
    "neutralQuaternary": "#d2d0ce",
    "neutralQuaternaryAlt": "#e1dfdd",
    "neutralSecondary": "#605e5c",
    "neutralSecondaryAlt": "#8a8886",
    "neutralTertiary": "#a19f9d",
    "neutralTertiaryAlt": "#c8c6c4",
    "orange": "#d83b01",
    "orangeLight": "#ea4300",
    "orangeLighter": "#ff8c00",
    "purple": "#5c2d91",
    "purpleDark": "#32145a",
    "purpleLight": "#b4a0ff",
    "red": "#e81123",
    "redDark": "#a4262c",
    "teal": "#008272",
    "tealDark": "#004b50",
    "tealLight": "#00b294",
    "themeDark": "#005a9e",
    "themeDarkAlt": "#106ebe",
    "themeDarker": "#004578",
    "themeLight": "#c7e0f4",
    "themeLighter": "#deecf9",
    "themeLighterAlt": "#eff6fc",
    "themePrimary": "#0078d4",
    "themeSecondary": "#2b88d8",
    "themeTertiary": "#71afe5",
    "white": "#ffffff",
    "whiteTranslucent40": "rgba(255,255,255,.4)",
    "yellow": "#ffb900",
    "yellowDark": "#d29200",
    "yellowLight": "#fff100",
  },
  "rtl": undefined,
  "semanticColors": Object {
    "accentButtonBackground": "#0078d4",
    "accentButtonText": "#ffffff",
    "actionLink": "#323130",
    "actionLinkHovered": "#201f1e",
    "blockingBackground": "#FDE7E9",
    "blockingIcon": "#FDE7E9",
    "bodyBackground": "#ffffff",
    "bodyBackgroundChecked": "#edebe9",
    "bodyBackgroundHovered": "#f3f2f1",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodySubtext": "#605e5c",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "buttonBackground": "#ffffff",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundCheckedHovered": "#edebe9",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#f3f2f1",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextCheckedHovered": "#000000",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
    "cardStandoutBackground": "#ffffff",
    "defaultStateBackground": "#faf9f8",
    "disabledBackground": "#f3f2f1",
    "disabledBodySubtext": "#c8c6c4",
    "disabledBodyText": "#a19f9d",
    "disabledBorder": "#c8c6c4",
    "disabledSubtext": "#d2d0ce",
    "disabledText": "#a19f9d",
    "errorBackground": "#FDE7E9",
    "errorIcon": "#A80000",
    "errorText": "#a4262c",
    "focusBorder": "#605e5c",
    "infoBackground": "#f3f2f1",
    "infoIcon": "#605e5c",
    "inputBackground": "#ffffff",
    "inputBackgroundChecked": "#0078d4",
    "inputBackgroundCheckedHovered": "#005a9e",
    "inputBorder": "#605e5c",
    "inputBorderHovered": "#323130",
    "inputFocusBorderAlt": "#0078d4",
    "inputForegroundChecked": "#ffffff",
    "inputIcon": "#0078d4",
    "inputIconDisabled": "#a19f9d",
    "inputIconHovered": "#005a9e",
    "inputPlaceholderBackgroundChecked": "#deecf9",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "inputTextHovered": "#201f1e",
    "link": "#0078d4",
    "linkHovered": "#004578",
    "listBackground": "#ffffff",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "listItemBackgroundChecked": "#edebe9",
    "listItemBackgroundCheckedHovered": "#e1dfdd",
    "listItemBackgroundHovered": "#f3f2f1",
    "listText": "#323130",
    "listTextColor": "#323130",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuHeader": "#0078d4",
    "menuIcon": "#0078d4",
    "menuItemBackgroundChecked": "#edebe9",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "messageLink": "#005A9E",
    "messageLinkHovered": "#004578",
    "messageText": "#323130",
    "primaryButtonBackground": "#0078d4",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#106ebe",
    "primaryButtonBackgroundPressed": "#005a9e",
    "primaryButtonBorder": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "severeWarningBackground": "#FED9CC",
    "severeWarningIcon": "#D83B01",
    "smallInputBorder": "#605e5c",
    "successBackground": "#DFF6DD",
    "successIcon": "#107C10",
    "successText": "#107C10",
    "variantBorder": "#edebe9",
    "variantBorderHovered": "#a19f9d",
    "warningBackground": "#FFF4CE",
    "warningHighlight": "#ffb900",
    "warningIcon": "#797775",
    "warningText": "#323130",
  },
  "spacing": Object {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
}
`;

exports[`createTheme inverted theme 1`] = `
Object {
  "disableGlobalClassNames": false,
  "effects": Object {
    "elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
    "elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
    "elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
    "roundedCorner2": "2px",
    "roundedCorner4": "4px",
    "roundedCorner6": "6px",
  },
  "fonts": Object {
    "large": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "18px",
      "fontWeight": 400,
    },
    "medium": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
    },
    "mediumPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "16px",
      "fontWeight": 400,
    },
    "mega": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "68px",
      "fontWeight": 600,
    },
    "small": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "smallPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "superLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "42px",
      "fontWeight": 600,
    },
    "tiny": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "20px",
      "fontWeight": 600,
    },
    "xLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    },
    "xSmall": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xxLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "28px",
      "fontWeight": 600,
    },
    "xxLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "32px",
      "fontWeight": 600,
    },
  },
  "isInverted": true,
  "palette": Object {
    "accent": "#0078d4",
    "black": "#000000",
    "blackTranslucent40": "rgba(0,0,0,.4)",
    "blue": "#0078d4",
    "blueDark": "#002050",
    "blueLight": "#00bcf2",
    "blueMid": "#00188f",
    "green": "#107c10",
    "greenDark": "#004b1c",
    "greenLight": "#bad80a",
    "magenta": "#b4009e",
    "magentaDark": "#5c005c",
    "magentaLight": "#e3008c",
    "neutralDark": "#201f1e",
    "neutralLight": "#edebe9",
    "neutralLighter": "#f3f2f1",
    "neutralLighterAlt": "#faf9f8",
    "neutralPrimary": "#323130",
    "neutralPrimaryAlt": "#3b3a39",
    "neutralQuaternary": "#d2d0ce",
    "neutralQuaternaryAlt": "#e1dfdd",
    "neutralSecondary": "#605e5c",
    "neutralSecondaryAlt": "#8a8886",
    "neutralTertiary": "#a19f9d",
    "neutralTertiaryAlt": "#c8c6c4",
    "orange": "#d83b01",
    "orangeLight": "#ea4300",
    "orangeLighter": "#ff8c00",
    "purple": "#5c2d91",
    "purpleDark": "#32145a",
    "purpleLight": "#b4a0ff",
    "red": "#e81123",
    "redDark": "#a4262c",
    "teal": "#008272",
    "tealDark": "#004b50",
    "tealLight": "#00b294",
    "themeDark": "#005a9e",
    "themeDarkAlt": "#106ebe",
    "themeDarker": "#004578",
    "themeLight": "#c7e0f4",
    "themeLighter": "#deecf9",
    "themeLighterAlt": "#eff6fc",
    "themePrimary": "#0078d4",
    "themeSecondary": "#2b88d8",
    "themeTertiary": "#71afe5",
    "white": "#ffffff",
    "whiteTranslucent40": "rgba(255,255,255,.4)",
    "yellow": "#ffb900",
    "yellowDark": "#d29200",
    "yellowLight": "#fff100",
  },
  "rtl": undefined,
  "semanticColors": Object {
    "accentButtonBackground": "#0078d4",
    "accentButtonText": "#ffffff",
    "actionLink": "#323130",
    "actionLinkHovered": "#201f1e",
    "blockingBackground": "#442726",
    "blockingIcon": "#442726",
    "bodyBackground": "#ffffff",
    "bodyBackgroundChecked": "#edebe9",
    "bodyBackgroundHovered": "#f3f2f1",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodySubtext": "#605e5c",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "buttonBackground": "#ffffff",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundCheckedHovered": "#edebe9",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#f3f2f1",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextCheckedHovered": "#000000",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "cardShadowHovered": "0 0 1px #a19f9d",
    "cardStandoutBackground": "#ffffff",
    "defaultStateBackground": "#faf9f8",
    "disabledBackground": "#f3f2f1",
    "disabledBodySubtext": "#c8c6c4",
    "disabledBodyText": "#a19f9d",
    "disabledBorder": "#c8c6c4",
    "disabledSubtext": "#d2d0ce",
    "disabledText": "#a19f9d",
    "errorBackground": "#442726",
    "errorIcon": "#F1707B",
    "errorText": "#F1707B",
    "focusBorder": "#605e5c",
    "infoBackground": "#323130",
    "infoIcon": "#C8C6C4",
    "inputBackground": "#ffffff",
    "inputBackgroundChecked": "#0078d4",
    "inputBackgroundCheckedHovered": "#005a9e",
    "inputBorder": "#605e5c",
    "inputBorderHovered": "#323130",
    "inputFocusBorderAlt": "#0078d4",
    "inputForegroundChecked": "#ffffff",
    "inputIcon": "#0078d4",
    "inputIconDisabled": "#a19f9d",
    "inputIconHovered": "#005a9e",
    "inputPlaceholderBackgroundChecked": "#deecf9",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "inputTextHovered": "#201f1e",
    "link": "#0078d4",
    "linkHovered": "#004578",
    "listBackground": "#ffffff",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "listItemBackgroundChecked": "#edebe9",
    "listItemBackgroundCheckedHovered": "#e1dfdd",
    "listItemBackgroundHovered": "#f3f2f1",
    "listText": "#323130",
    "listTextColor": "#323130",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuHeader": "#0078d4",
    "menuIcon": "#0078d4",
    "menuItemBackgroundChecked": "#edebe9",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "messageLink": "#6CB8F6",
    "messageLinkHovered": "#82C7FF",
    "messageText": "#F3F2F1",
    "primaryButtonBackground": "#0078d4",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#106ebe",
    "primaryButtonBackgroundPressed": "#005a9e",
    "primaryButtonBorder": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "severeWarningBackground": "#4F2A0F",
    "severeWarningIcon": "#FCE100",
    "smallInputBorder": "#605e5c",
    "successBackground": "#393D1B",
    "successIcon": "#92C353",
    "successText": "#92c353",
    "variantBorder": "#edebe9",
    "variantBorderHovered": "#a19f9d",
    "warningBackground": "#433519",
    "warningHighlight": "#fff100",
    "warningIcon": "#C8C6C4",
    "warningText": "#F3F2F1",
  },
  "spacing": Object {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
}
`;

exports[`createTheme maps semantic colors 1`] = `
Object {
  "disableGlobalClassNames": false,
  "effects": Object {
    "elevation16": "0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108)",
    "elevation4": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "elevation64": "0 25.6px 57.6px 0 rgba(0, 0, 0, 0.22), 0 4.8px 14.4px 0 rgba(0, 0, 0, 0.18)",
    "elevation8": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
    "roundedCorner2": "2px",
    "roundedCorner4": "4px",
    "roundedCorner6": "6px",
  },
  "fonts": Object {
    "large": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "18px",
      "fontWeight": 400,
    },
    "medium": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "14px",
      "fontWeight": 400,
    },
    "mediumPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "16px",
      "fontWeight": 400,
    },
    "mega": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "68px",
      "fontWeight": 600,
    },
    "small": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "smallPlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "12px",
      "fontWeight": 400,
    },
    "superLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "42px",
      "fontWeight": 600,
    },
    "tiny": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "20px",
      "fontWeight": 600,
    },
    "xLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "24px",
      "fontWeight": 600,
    },
    "xSmall": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "10px",
      "fontWeight": 400,
    },
    "xxLarge": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "28px",
      "fontWeight": 600,
    },
    "xxLargePlus": Object {
      "MozOsxFontSmoothing": "grayscale",
      "WebkitFontSmoothing": "antialiased",
      "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
      "fontSize": "32px",
      "fontWeight": 600,
    },
  },
  "isInverted": false,
  "palette": Object {
    "accent": "red",
    "black": "#000000",
    "blackTranslucent40": "rgba(0,0,0,.4)",
    "blue": "#0078d4",
    "blueDark": "#002050",
    "blueLight": "#00bcf2",
    "blueMid": "#00188f",
    "green": "#107c10",
    "greenDark": "#004b1c",
    "greenLight": "#bad80a",
    "magenta": "#b4009e",
    "magentaDark": "#5c005c",
    "magentaLight": "#e3008c",
    "neutralDark": "#201f1e",
    "neutralLight": "#edebe9",
    "neutralLighter": "#f3f2f1",
    "neutralLighterAlt": "#faf9f8",
    "neutralPrimary": "#323130",
    "neutralPrimaryAlt": "#3b3a39",
    "neutralQuaternary": "#d2d0ce",
    "neutralQuaternaryAlt": "#e1dfdd",
    "neutralSecondary": "#605e5c",
    "neutralSecondaryAlt": "#8a8886",
    "neutralTertiary": "#a19f9d",
    "neutralTertiaryAlt": "#c8c6c4",
    "orange": "#d83b01",
    "orangeLight": "#ea4300",
    "orangeLighter": "#ff8c00",
    "purple": "#5c2d91",
    "purpleDark": "#32145a",
    "purpleLight": "#b4a0ff",
    "red": "#e81123",
    "redDark": "#a4262c",
    "teal": "#008272",
    "tealDark": "#004b50",
    "tealLight": "#00b294",
    "themeDark": "#005a9e",
    "themeDarkAlt": "#106ebe",
    "themeDarker": "#004578",
    "themeLight": "#c7e0f4",
    "themeLighter": "#deecf9",
    "themeLighterAlt": "#eff6fc",
    "themePrimary": "red",
    "themeSecondary": "#2b88d8",
    "themeTertiary": "#71afe5",
    "white": "#ffffff",
    "whiteTranslucent40": "rgba(255,255,255,.4)",
    "yellow": "#ffb900",
    "yellowDark": "#d29200",
    "yellowLight": "#fff100",
  },
  "rtl": undefined,
  "semanticColors": Object {
    "accentButtonBackground": "red",
    "accentButtonText": "#ffffff",
    "actionLink": "#323130",
    "actionLinkHovered": "#201f1e",
    "blockingBackground": "#FDE7E9",
    "blockingIcon": "#FDE7E9",
    "bodyBackground": "#ffffff",
    "bodyBackgroundChecked": "#edebe9",
    "bodyBackgroundHovered": "#f3f2f1",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodySubtext": "#605e5c",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "buttonBackground": "#ffffff",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundCheckedHovered": "#edebe9",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#f3f2f1",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextCheckedHovered": "#000000",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "cardShadow": "0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)",
    "cardShadowHovered": "0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108)",
    "cardStandoutBackground": "#ffffff",
    "defaultStateBackground": "#faf9f8",
    "disabledBackground": "#f3f2f1",
    "disabledBodySubtext": "#c8c6c4",
    "disabledBodyText": "#a19f9d",
    "disabledBorder": "#c8c6c4",
    "disabledSubtext": "#d2d0ce",
    "disabledText": "#a19f9d",
    "errorBackground": "#FDE7E9",
    "errorIcon": "#A80000",
    "errorText": "#a4262c",
    "focusBorder": "#605e5c",
    "infoBackground": "#f3f2f1",
    "infoIcon": "#605e5c",
    "inputBackground": "#ffffff",
    "inputBackgroundChecked": "red",
    "inputBackgroundCheckedHovered": "#005a9e",
    "inputBorder": "#605e5c",
    "inputBorderHovered": "#323130",
    "inputFocusBorderAlt": "red",
    "inputForegroundChecked": "#ffffff",
    "inputIcon": "red",
    "inputIconDisabled": "#a19f9d",
    "inputIconHovered": "#005a9e",
    "inputPlaceholderBackgroundChecked": "#deecf9",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "inputTextHovered": "#201f1e",
    "link": "red",
    "linkHovered": "#004578",
    "listBackground": "#ffffff",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "listItemBackgroundChecked": "#edebe9",
    "listItemBackgroundCheckedHovered": "#e1dfdd",
    "listItemBackgroundHovered": "#f3f2f1",
    "listText": "#323130",
    "listTextColor": "#323130",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuHeader": "red",
    "menuIcon": "red",
    "menuItemBackgroundChecked": "#edebe9",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "messageLink": "#005A9E",
    "messageLinkHovered": "#004578",
    "messageText": "#323130",
    "primaryButtonBackground": "red",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#106ebe",
    "primaryButtonBackgroundPressed": "#005a9e",
    "primaryButtonBorder": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "severeWarningBackground": "#FED9CC",
    "severeWarningIcon": "#D83B01",
    "smallInputBorder": "#605e5c",
    "successBackground": "#DFF6DD",
    "successIcon": "#107C10",
    "successText": "#107C10",
    "variantBorder": "#edebe9",
    "variantBorderHovered": "#a19f9d",
    "warningBackground": "#FFF4CE",
    "warningHighlight": "#ffb900",
    "warningIcon": "#797775",
    "warningText": "#323130",
  },
  "spacing": Object {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
}
`;
